I broke avatars in last commit.

--- a/Mirko/Mirko.Universal/Controls/Entry.xaml
+++ b/Mirko/Mirko.Universal/Controls/Entry.xaml
@@ -204,6 +204,7 @@
                     CacheDuration="2"
                     DownsampleToViewSize="True"
                     Source="{Binding Data.AuthorAvatarURL}"
+                    LoadingPlaceholder="avatar_default.png"
                     ErrorPlaceholder="avatar_default.png" />
 
         <StackPanel Grid.Row="1"
