--- a/Mirko/Mirko.WindowsPhone/Controls/Entry.xaml
+++ b/Mirko/Mirko.WindowsPhone/Controls/Entry.xaml
@@ -210,6 +210,7 @@
                     DownsampleToViewSize="True"
                     CacheDuration="2"
                     Source="{Binding Data.AuthorAvatarURL}"
+                    LoadingPlaceholder="avatar_default.png"
                     ErrorPlaceholder="avatar_default.png" />
 
         <StackPanel Grid.Row="1"
