--- a/Mirko/Mirko.Shared/Controls/EntryEmbed.xaml
+++ b/Mirko/Mirko.Shared/Controls/EntryEmbed.xaml
@@ -32,6 +32,7 @@
         <ff:FFImage x:Name="Image"
                     CacheDuration="2"
                     TransformPlaceholders="False"
+                    LoadingPlaceholder="loading_placeholder.png"
                     ErrorPlaceholder="error_placeholder.png"
                     DownsampleToViewSize="True"
                     Transformations="{Binding Converter={StaticResource EmbedTransformation}}"/>
