--- a/Mirko/Mirko.WindowsPhone/Pages/PivotPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/PivotPage.xaml
@@ -11,7 +11,9 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
-    DataContext="{Binding Main, Mode=OneWay, Source={StaticResource Locator}}">
+    DataContext="{Binding Main, Mode=OneWay, Source={StaticResource Locator}}"
+    Loaded="Page_Loaded"
+    Unloaded="Page_Unloaded">
 
     <Page.Resources>
         <DataTemplate x:Name="EntryTemplate">
