--- a/Mirko/Mirko.Shared/Controls/HashtagSuggestionBox.xaml
+++ b/Mirko/Mirko.Shared/Controls/HashtagSuggestionBox.xaml
@@ -34,8 +34,7 @@
                   Grid.Row="1"
                   IsItemClickEnabled="True"
                   ItemClick="SuggestionsListView_ItemClick"
-                  ItemsSource="{Binding Suggestions}"
-                  VirtualizingStackPanel.VirtualizationMode="Recycling" >
+                  ItemsSource="{Binding Suggestions}" >
 
             <ListView.ItemTemplate>
                 <DataTemplate>
