Implement copying embed links.

--- a/Mirko/Mirko.Shared/Controls/EntryEmbed.xaml
+++ b/Mirko/Mirko.Shared/Controls/EntryEmbed.xaml
@@ -23,6 +23,8 @@
         <MenuFlyout>
             <MenuFlyoutItem Text="zapisz"
                             Click="SaveImage_Click"/>
+            <MenuFlyoutItem Text="skopiuj link" 
+                            Click="CopyURL_Click"/>
         </MenuFlyout>
     </FlyoutBase.AttachedFlyout>
 
